structure change + bugfixes

--- a/static/CSS/sre.css
+++ b/static/CSS/sre.css
@@ -17,7 +17,7 @@ h1, h2, h3 {
     color: #121212; /* White color for headings */
 }
 body {
-    background-color: #87CEFA; /* Light Sky Blue background color */
+    background-color: #D8BFD8; /* Thistle Blue background color */
     color: #121212;
     font-family: 'Trebuchet MS', sans-serif; /* Font style */
     margin: 0;
