--- a/static/CSS/pairs.css
+++ b/static/CSS/pairs.css
@@ -1,13 +1,88 @@
 #put-spread-table, #pairs {
     border-collapse: collapse;
     margin-top: 20px;
-    width: auto;
 }
 #put-spread-table th, #put-spread-table td, #pairs th, #pairs td {
     border: 1px solid black;
     padding: 8px;
     text-align: left;
 }
+
+#put-spread-table th:nth-child(1), #put-spread-table td:nth-child(1) {
+    width: 102px;
+}
+#put-spread-table th:nth-child(2), #put-spread-table td:nth-child(2) {
+    width: 70px;
+}
+#put-spread-table th:nth-child(3), #put-spread-table td:nth-child(3) {
+    width: 56px;
+}
+#put-spread-table th:nth-child(4), #put-spread-table td:nth-child(4) {
+    width: 66px;
+}
+#put-spread-table th:nth-child(5), #put-spread-table td:nth-child(5) {
+    width: 79px;
+}
+#put-spread-table th:nth-child(6), #put-spread-table td:nth-child(6) {
+    width: 85px;
+}
+#put-spread-table th:nth-child(7), #put-spread-table td:nth-child(7) {
+    width: 85px;
+}
+#put-spread-table th:nth-child(8), #put-spread-table td:nth-child(8) {
+    width: 199px;
+}
+#put-spread-table th:nth-child(9), #put-spread-table td:nth-child(9) {
+    width: 199px;
+}
+
+/* Pairs Dimension */
+#pairs th:nth-child(1), #pairs td:nth-child(1) {
+    width: 75px;
+}
+#pairs th:nth-child(2), #pairs td:nth-child(2) {
+    width: 80px;
+}
+#pairs th:nth-child(3), #pairs td:nth-child(3) {
+    width: 75px;
+}
+#pairs th:nth-child(4), #pairs td:nth-child(4) {
+    width: 79px;
+}
+#pairs th:nth-child(5), #pairs td:nth-child(5) {
+    width: 69px;
+}
+#pairs th:nth-child(6), #pairs td:nth-child(6) {
+    width: 70px;
+}
+#pairs th:nth-child(7), #pairs td:nth-child(7) {
+    width: 79px;
+}
+#pairs th:nth-child(8), #pairs td:nth-child(8) {
+    width: 70px;
+}
+#pairs th:nth-child(9), #pairs td:nth-child(9) {
+    width: 71px;
+}
+#pairs th:nth-child(10), #pairs td:nth-child(10) {
+    width: 197px;
+}
+#pairs th:nth-child(11), #pairs td:nth-child(11) {
+    width: 197px;
+}
+#pairs th:nth-child(12), #pairs td:nth-child(12) {
+    width: 90px;
+}
+#pairs th:nth-child(13), #pairs td:nth-child(13) {
+    width: 55px;
+}
+#pairs th:nth-child(14), #pairs td:nth-child(14) {
+    width: 65px;
+}
+#pairs th:nth-child(15), #pairs td:nth-child(15) {
+    width: 75px;
+}
+
 .grey-shade {
     background-color: lightgrey;
 }
@@ -39,7 +114,7 @@ label {
     font-weight: bold; /* Make the label bold */
 }
 body {
-    background-color: #87CEFA; /* Light Sky Blue background color */
+    background-color: #FFEFD5; /* Papaya Whip background color */
     color: #121212;
     font-family: 'Trebuchet MS', sans-serif; /* Font style */
     margin: 0;
