--- a/templates/spread.html
+++ b/templates/spread.html
@@ -15,7 +15,7 @@
                 <th>Short %UL</th>
                 <th>K-Diff</th>
                 <th>DTE</th>
-                <th>C</th>
+                <th class="clickable">C</th>
                 <th>MidAvg</th>
                 <th>Sell Mid</th>
                 <th>Buy Mid</th>
