fix dte and empty result list

--- a/templates/pairs.html
+++ b/templates/pairs.html
@@ -281,8 +281,8 @@
             }
             document.body.appendChild(ts);
         })
-        let timeStampDiv = createTsDiv(document, currentDate);
-        document.body.appendChild(timeStampDiv);
+        // let timeStampDiv = createTsDiv(document, currentDate);
+        // document.body.appendChild(timeStampDiv);
     </script>
 </body>
 </html>
