--- a/templates/spread.html
+++ b/templates/spread.html
@@ -69,8 +69,8 @@
             }
             document.body.appendChild(ts);
         })
-        let timeStampDiv = createTsDiv(document, currentDate)
-        document.body.appendChild(timeStampDiv);
+        // let timeStampDiv = createTsDiv(document, currentDate)
+        // document.body.appendChild(timeStampDiv);
     </script>
 </body>
 </html>
