--- a/templates/pairs.html
+++ b/templates/pairs.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Buy/Sell Pairs for {{ usym }}, Expiry Combo: {{ expiry_combo }}</title>
+    <title>{{ usym }} {{ expiry_combo }}</title>
     <link rel="stylesheet" href="../static/CSS/pairs.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.1.0/socket.io.js"></script>
     <script src="{{ url_for('static', filename='JavaScript/timeStamp.js') }}"></script>
@@ -10,15 +10,24 @@
         #put-spread-table, #pairs {
             border-collapse: collapse;
             margin-top: 20px;
-            width: auto;
+            table-layout: fixed;
+            font-size: 14px;
+            /* width: auto; */
         }
         #put-spread-table th, #put-spread-table td, #pairs th, #pairs td {
             border: 1px solid black;
             padding: 8px;
             text-align: left;
+            overflow: hidden; /* Hide overflow */
+            text-overflow: ellipsis; /* Add ellipsis for overflow text */
+            white-space: nowrap; /* Prevent text wrapping */
+            font-size: 14px;
         }
         .grey-shade {
             background-color: lightgrey;
+        }
+        .white-shade {
+            background-color: white;
         }
         .yellow-shade {
             background-color: yellow;
@@ -112,8 +121,8 @@
                 <th>Buy-B</th>
                 <th>Buy-A</th>
                 <th>Buy-A#</th>
-                <th>Sell IceChat</th>
-                <th>Buy IceChat</th>
+                <th>Short Leg</th>
+                <th>Long Leg</th>
                 <th>Sell-DTE</th>
                 <th>Diff</th>
                 <th>%UL</th>
@@ -139,8 +148,8 @@
             "Buy-B",
             "Buy-A",
             "Buy-A#",
-            "Sell IceChat",
-            "Buy IceChat",
+            "Short Leg",
+            "Long Leg",
             "Sell-DTE",
             "Diff",
             "%UL",
@@ -155,7 +164,9 @@
         });
         let currentDate = getCurrentTimeStamp(selectedTimezone, new Date());
         let removedColumns = []; // To keep track of removed columns and their indices
-        let pxCols = ["Buy-B", "Sell-B", "Buy-A", "Sell-A"];
+        // let pxCols = ["Buy-B", "Sell-B", "Buy-A", "Sell-A"];
+        let buyCols = ["Buy-B", "Buy-B#", "Buy-A", "Buy-A#"];
+        let sellCols = ["Sell-B", "Sell-A", "Sell-B#", "Sell-A#"];
 
         function removeColumn(colNameToRemove){
             let colIndex = currentHeaders.indexOf(colNameToRemove);
@@ -237,9 +248,10 @@
                 currentHeaders.forEach( (col) => {
                     const td = document.createElement('td');
                     if (col in pair){
-                        if (pxCols.indexOf(col) > -1){
-                            let index = currentHeaders.indexOf(col);
+                        if (buyCols.indexOf(col) > -1){
                             td.classList.add("grey-shade");
+                        }else if (sellCols.indexOf(col) > -1){
+                            td.classList.add("white-shade");
                         }
                         td.innerText = pair[col];
                         // Add coloring on C$ based on C' and C''
@@ -265,10 +277,10 @@
                                 url.searchParams.append('side', 'sell');
                                 url.searchParams.append('quantity', event.data.quantity);
                                 url.searchParams.append('price', pair["Sell-B"]);
-                                url.searchParams.append('iceChat', pair["Sell IceChat"]);
+                                url.searchParams.append('iceChat', pair["Short Leg"]);
                                 // url.searchParams.append('buyQty', event.data.quantity);
                                 // url.searchParams.append('buyAsk', pair["Buy-A"]);
-                                // url.searchParams.append('buyLegIceChat', pair["Buy IceChat"]);
+                                // url.searchParams.append('buyLegIceChat', pair["Long Leg"]);
                                 window.location.href = url.toString();
                             };
                         }
