code improvement + small fix on symbols subscribed when only calling for SPY

--- a/static/CSS/pairs.css
+++ b/static/CSS/pairs.css
@@ -91,11 +91,12 @@
 .grey-shade {
     background-color: lightgrey;
 }
-
 .yellow-shade {
     background-color: yellow;
 }
-
+.white-shade {
+    background-color: white;
+}
 .green-shade {
     background-color: green;
 }
